Modified the layout of user page

--- a/app/src/main/res/layout/exams_activity.xml
+++ b/app/src/main/res/layout/exams_activity.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".Exams">
+    tools:context=".Scribbles.Exams">
 
      <RelativeLayout
          android:layout_width="fill_parent"
