--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -5,34 +5,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".User.User">
+    tools:context=".User">
 
 
     <Button
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="73dp"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="7dp"
-        android:layout_marginBottom="-8dp"
+        android:layout_centerVertical="true"
+        android:layout_marginBottom="344dp"
         android:paddingTop="0dp"
         android:paddingBottom="0dp"
-        android:text="@string/new_documents"
+        android:text="@string/newdoc"
         android:textSize="18sp"
         android:textStyle="bold" />
 
     <Button
         android:id="@+id/records"
-        android:layout_width="219dp"
-        android:layout_height="91dp"
-        android:layout_alignParentEnd="true"
+        android:layout_width="wrap_content"
+        android:layout_height="75dp"
+        android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="87dp"
+        android:layout_marginStart="-2dp"
+        android:layout_marginBottom="428dp"
         android:paddingTop="0dp"
         android:paddingBottom="0dp"
-        android:text="@string/medical_records"
+        android:text="medical_records"
         android:textSize="25sp"
         android:textStyle="bold" />
 
