--- a/app/src/main/res/layout/gallery_grid_layout.xml
+++ b/app/src/main/res/layout/gallery_grid_layout.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".Gallery.ImageMainActivity">
 
@@ -55,6 +56,14 @@
         android:stretchMode="columnWidth"
         android:verticalSpacing="10dp"
         android:visibility="visible" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        app:srcCompat="@android:drawable/ic_dialog_email" />
+
 
 
 </LinearLayout>
