--- a/app/src/main/res/layout/prescription_activity.xml
+++ b/app/src/main/res/layout/prescription_activity.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:layout_height="match_parent"
-    tools:context=".Prescription">
+    tools:context=".Scribbles.Prescription">
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
