--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -8,18 +8,6 @@
     tools:context=".User">
 
 
-    <Button
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="73dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerVertical="true"
-        android:layout_marginBottom="344dp"
-        android:paddingTop="0dp"
-        android:paddingBottom="0dp"
-        android:text="@string/newdoc"
-        android:textSize="18sp"
-        android:textStyle="bold" />
 
     <Button
         android:id="@+id/records"
@@ -27,8 +15,8 @@
         android:layout_height="75dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="-2dp"
-        android:layout_marginBottom="428dp"
+        android:layout_marginStart="9dp"
+        android:layout_marginBottom="6dp"
         android:paddingTop="0dp"
         android:paddingBottom="0dp"
         android:text="medical_records"
@@ -39,11 +27,49 @@
         android:id="@+id/textView"
         android:layout_width="282dp"
         android:layout_height="68dp"
-        android:textStyle="bold"
-        android:textSize="30sp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="39dp"
-        android:layout_marginTop="21dp" />
+        android:layout_centerVertical="true"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="128dp"
+        android:textSize="30sp"
+        android:textStyle="bold" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabadd"
+        android:layout_width="66dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="9dp"
+        app:rippleColor="@color/design_default_color_on_primary"
+        app:srcCompat="@android:drawable/ic_input_add" />
+
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="277dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="50dp"
+        android:fontFamily="@font/indigo_daisy"
+        android:text="@string/medical_notepad"
+        android:textSize="50sp" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+
+        android:textSize="19sp"
+        android:fontFamily="@font/roboto_regular"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="58dp"
+        android:text="@string/tag" />
+    />
 
 </RelativeLayout>
